--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "supertest": "^1.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "mongoose": "^4.4.6",
     "swig": "^1.4.2"
   }
