--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "cheerio": "^0.20.0",
+    "gulp": "^3.9.1",
     "mocha": "^2.4.5",
     "supertest": "^1.2.0"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.6",
+    "method-override": "^2.3.5",
     "mongoose": "^4.4.6",
     "swig": "^1.4.2"
   }
