--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
+    "express": "^4.13.4",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.6",
     "swig": "^1.4.2"
