--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "CONN=mongodb://localhost/nwind-test ./node_modules/mocha/bin/mocha && CONN=sqlite:nwind-test.db ./node_modules/mocha/bin/mocha",
+    "test": "CONN=sqlite:nwind-test.db ./node_modules/mocha/bin/mocha && CONN=mongodb://localhost/nwind-test ./node_modules/mocha/bin/mocha",
     "sequelize": "CONN=sqlite:nwind.db node server",
     "mongoose": "CONN=mongodb://localhost/nwind node server"
   },
