put in npm start and add error messages for not connecting to the db server

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "CONN=postgres://localhost/circle_test ./node_modules/mocha/bin/mocha && CONN=mongodb://localhost/nwind-test ./node_modules/mocha/bin/mocha",
     "sequelize": "CONN=postgres://localhost/nwind node server",
-    "mongoose": "CONN=mongodb://localhost/nwind node server"
+    "mongoose": "CONN=mongodb://localhost/nwind node server",
+    "start": "npm run mongoose"
   },
   "author": "",
   "license": "ISC",
